
apply plugin: 'com.android.application'
apply plugin: 'com.google.gms.google-services'

android {
    namespace = "com.fanz"
    compileSdk 34

    defaultConfig {
        applicationId "com.fanz"
        minSdk 23
        targetSdk 34
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

ext {
    supportLibraryVersion = '28.0.0'
    gsonVersion = '2.8.2'
    picassoVersion = '2.71828'
    powerPreferenceVersion = '2.1.0'
    roomVersion = '1.1.1'

    //Test
    junitVersion = '4.12'
    espressoVersion = '3.0.1'
    mockitoVersion = '2.23.0'
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    //AndroidSupport
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.recyclerview:recyclerview:1.3.2'
    implementation 'androidx.exifinterface:exifinterface:1.3.7'

    //Gson
    implementation "com.google.code.gson:gson:2.10.1"

    //Retrofit
    implementation "com.squareup.retrofit2:retrofit:2.9.0"
    implementation "com.squareup.retrofit2:converter-gson:2.9.0"

    //PowerPreference
    implementation "com.github.AliAsadi:PowerPreference:$powerPreferenceVersion"

    //ButterKnife
    implementation 'com.jakewharton:butterknife:10.2.0'
    implementation 'com.google.firebase:firebase-config:21.6.0'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'


    //Picasso
    implementation "com.squareup.picasso:picasso:$picassoVersion"

    //Room
    implementation 'androidx.room:room-runtime:2.6.1'
    annotationProcessor 'androidx.room:room-compiler:2.6.1'

    //unit test
//    testImplementation "junit:junit:$junitVersion"
//    testImplementation "org.mockito:mockito-core:$mockitoVersion"
//
//    instrumentation test
//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'

    // Add the dependencies for the Dynamic Links and Analytics libraries
    // When using the BoM, you don't specify versions in Firebase library dependencies
    implementation 'com.google.firebase:firebase-dynamic-links:21.2.0'
    implementation 'com.google.firebase:firebase-analytics:21.5.0'
    implementation 'com.google.android.material:material:1.11.0'

}


tasks.withType(JavaCompile).configureEach {
    options.fork = true
    options.forkOptions.jvmArgs += [
            '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
            '--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
    ]
}
